feat(deps): permit sodium_compat v1 or v2 to be installed
https://paragonie.com/blog/2024/04/release-sodium-compat-v2-and-future-our-polyfill-libraries

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 	"require": {
 		"composer/installers": "~1.0",
 		"phpseclib/phpseclib": "~3.0",
-		"paragonie/sodium_compat": "^1.6",
+		"paragonie/sodium_compat": "^1|^2",
 		"monolog/monolog": "^1.18|^2|^3",
 		"michelf/php-markdown": "~1.9.1"
 	}
